<resources>
    <string name="app_name">R2DevProsProject</string>
    <string name="name_label">Nombre:</string>
    <string name="avatar_description_image">Imagen de Avatar</string>
    <string name="lastname_label">Apellido:</string>
    <string name="gender_label">Sexo:</string>
    <string name="age_label">Edad:</string>
    <string name="info_label">Información de contacto</string>
    <string name="address_button">Dirección</string>
    <string name="upload_button">Selecciona una imágen</string>

    <string name="street_label">Calle:</string>
    <string name="ext_number_label">Número Ext.:</string>
    <string name="int_number_label">Número Int.:</string>
    <string name="suburb_label">Colonia:</string>
    <string name="city_label">Ciudad:</string>
    <string name="state_label">Estado:</string>
    <string name="country_label">País:</string>
    <string name="zip_code_label">C.P.:</string>
</resources>