<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAvatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:elevation="100dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/avatar_description_image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/avatar2_foreground" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/btnUpload"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:elevation="16dp"
                android:clickable="true"
                android:contentDescription="@string/upload_button"
                android:focusable="true"
                android:src="@mipmap/ic_upload"
                app:layout_constraintBottom_toBottomOf="@id/cvAvatar"
                app:layout_constraintEnd_toEndOf="@id/cvAvatar"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="200dp"
                android:alpha="0"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name_label"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/cvAvatar" />

            <EditText
                android:id="@+id/etName"
                style="@style/Box"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/tvName"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/tvName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvLastName"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_label"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <EditText
                android:id="@+id/etLastName"
                style="@style/Box"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/tvLastName"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/tvLastName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvGender"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/tvLastName" />

            <EditText
                android:id="@+id/etGender"
                style="@style/Box"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/tvGender"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/tvGender"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvAge"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_label"
                app:layout_constraintEnd_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/tvGender" />

            <EditText
                android:id="@+id/etAge"
                style="@style/Box"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/tvAge"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/tvAge"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvInfo"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/info_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAge" />

            <Button
                android:id="@+id/btnAddress"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/address_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>